fix: links contrast ratio

--- a/css/styles.css
+++ b/css/styles.css
@@ -188,9 +188,9 @@ nav h1 a {
   width: 55%;
 }
 #restaurants-list li a {
-  background-color:#3397DB;
+  background-color:#0000FF;
   border-bottom: 3px solid #eee;
-  color: #fff;
+  color: #FFFFFF;
   display: inline-block;
   font-size: 1.0em;
   margin: 15px 0 0;
